--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Startup Employee API Docs</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet"
-      href="https://unpkg.com/swagger-ui-dist/swagger-ui.css" />
+    <title>Startup Employee API</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swagger-ui-dist/swagger-ui.css"
+    />
   </head>
   <body>
     <div id="swagger-ui"></div>
+
     <script src="https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js"></script>
     <script>
       window.onload = () => {
         window.ui = SwaggerUIBundle({
-          url: "../openapi.yaml",
-          dom_id: "#swagger-ui"
+          url: "openapi.yaml",      // <--- spec in same folder
+          dom_id: "#swagger-ui",
+          presets: [SwaggerUIBundle.presets.apis],
+          layout: "BaseLayout"
         });
       };
     </script>
